--- a/app/templates/video.html
+++ b/app/templates/video.html
@@ -1,16 +1,21 @@
 {% extends "index.html" %}
-
+<script type="text/javascript">
+    function getParameterByName(url, name) {
+        var match = RegExp('[?&]' + name + '=([^&]*)').exec(url);
+        return match && decodeURIComponent(match[1].replace(/\+/g, ' '));
+    }
+    </script>
 {% block content %}
     <h1>{{ _('Video') }}</h1>
 
     {% for video in videos %}
         <div class="b-images">
-            <img type="button" data-toggle="modal" data-target=".modal-{{ loop.index }}" src="http://img.youtube.com/vi/{{ video.url }}/mqdefault.jpg" alt="">
+            <img type="button" data-toggle="modal" data-target=".modal-{{ loop.index }}" src="http://img.youtube.com/vi/{{ video.video_id }}/mqdefault.jpg" alt="">
             <img>
             <div class="modal fade modal-{{ loop.index }}" tabindex="-1" role="dialog" aria-hidden="true">
                 <div class="modal-dialog">
                     <div class="modal-content">
-                        <video id="video-{{ loop.index }}" src="modal-{{ loop.index }}" class="video-js vjs-default-skin" controls preload="auto" width="640" height="480" data-setup='{ "techOrder": ["youtube"], "src": "http://www.youtube.com/watch?v={{ video.url }}" }'>
+                        <video id="video-{{ loop.index }}" src="modal-{{ loop.index }}" class="video-js vjs-default-skin" controls preload="auto" width="640" height="480" data-setup='{ "techOrder": ["youtube"], "src": "{{ video.url }}" }'>
                         </video>
                     </div>
                 </div>
