--- a/app/templates/page/page_list.html
+++ b/app/templates/page/page_list.html
@@ -18,6 +18,7 @@
     </li>
     {% endfor %}
     <li> <a href="{{get_url('.create_view', url=return_url, parent_id = parent_node.value.id) }}">Add new page</a></li>
+    <li> <a href="remove?id={{parent_node.value.id}}">Remove</a></li>
 </ul>
 {% endmacro %}
 
