--- a/app/templates/menu_content.html
+++ b/app/templates/menu_content.html
@@ -2,10 +2,10 @@
 
 {% block content %}
     {% if locale == 'en' %}
-    	 <h1>{{ page.title }}</h1>
-    	 <span>{{ page.text|safe }}</span>
+    	<h1>{{ page.title }}</h1>
+    	<div class="page-content">{{ page.text|safe }}</div>
     {% else %}
         <h1>{{ page.title_ru }}</h1>
-        <span>{{ page.text_ru|safe }}</span>
+        <div class="page-content">{{ page.text_ru|safe }}</div>
     {% endif %}
 {% endblock %}
