Fixed mnro requirements from customer

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -101,6 +101,11 @@
     clear:both;
 }
 
+.title {
+    margin-left: 5px;
+    font-size: 150%; /* Размер шрифта в процентах */
+}
+
 #back-to-top 
 {
     position: fixed;
