--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -1,13 +1,22 @@
-<div class="header-container">
-    <div class="header">
-        <a href="/"><img src="{{ url_for('static', filename='images/logo.jpg') }}"></a>
-        <img src="{{ url_for('static', filename='images/header/h1.png') }}">
-        <img src="{{ url_for('static', filename='images/header/h2.png') }}">
-        <img src="{{ url_for('static', filename='images/header/h3.png') }}">
-        <img src="{{ url_for('static', filename='images/header/h4.png') }}">
-        <img src="{{ url_for('static', filename='images/header/h5.png') }}">
-        <img src="{{ url_for('static', filename='images/header/h6.png') }}">
-        <img src="{{ url_for('static', filename='images/header/h7.png') }}">
-        <img src="{{ url_for('static', filename='images/header/h8.png') }}">
+<div class="header container-fluid">
+    <div class="row-fluid">
+        <div class="col-md-2">
+            <a href="/"><img src="{{ url_for('static', filename='images/logo.jpg') }}"></a>
+        </div>
+        <div class="col-md-2">
+            <img src="{{ url_for('static', filename='images/kazan/2.jpg') }}">
+        </div>
+        <div class="col-md-2">
+            <img src="{{ url_for('static', filename='images/kazan/4.jpg') }}">
+        </div>
+        <div class="col-md-2">
+            <img src="{{ url_for('static', filename='images/kazan/5.jpg') }}">
+        </div>
+        <div class="col-md-2">
+            <img src="{{ url_for('static', filename='images/kazan/6.jpg') }}">
+        </div>
+        <div class="col-md-2 text-center">
+            <a href="http://university.innopolis.ru/"><img src="{{ url_for('static', filename='images/iu_logo.png') }}"></a>
+        </div>
     </div>
 </div>
