--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -24,14 +24,11 @@
 {% include "header.html" %}
 
 <div class="line-separator"></div>
-<div class="after_header">
+<div class="after_header title">
     <a href="" id="changeLanguageButton">{{ _('ru') }}</a> | 
     <span>PSI 2015 ERSHOV INFORMATICS CONFERENCE * June, 24, 2015, Kazan, Russia</span>
 </div>
 <br>
-<div>
-    <p class="inline"><a href="admin">{{_('Admin Page')}}</a></p>
-</div>
 
 <div class="container-fluid">
     <div class="row-fluid">
