Started implementing new interfaces

--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -1,22 +1,10 @@
-<div class="header container-fluid">
-    <div class="row-fluid">
-        <div class="col-md-2">
-            <a href="/"><img src="{{ url_for('static', filename='images/logo.jpg') }}"></a>
-        </div>
-        <div class="col-md-2">
-            <img src="{{ url_for('static', filename='images/kazan/2.jpg') }}">
-        </div>
-        <div class="col-md-2">
-            <img src="{{ url_for('static', filename='images/kazan/4.jpg') }}">
-        </div>
-        <div class="col-md-2">
-            <img src="{{ url_for('static', filename='images/kazan/5.jpg') }}">
-        </div>
-        <div class="col-md-2">
-            <img src="{{ url_for('static', filename='images/kazan/6.jpg') }}">
-        </div>
-        <div class="col-md-2 text-center">
-            <a href="http://university.innopolis.ru/"><img src="{{ url_for('static', filename='images/iu_logo.png') }}"></a>
-        </div>
+<div class="b-header">
+    <div class="b-conf-info">
+        <span class="b-conf-info-arraw"><</span>
+        <span>Ershav Informaties conference</span>
+        <span class="b-conf-info-arraw">></span>
+    </div>
+    <div class="b-inno-logo">
+        <a href="/"><img src="{{ url_for('static', filename='images/inno_logo.png') }}"></a>
     </div>
 </div>
