--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -1,5 +1,6 @@
 <div class="b-header">
     <div class="b-conf-info">
+        <a class="b-change-lang" href="" id="changeLanguageButton">{{ _('ru') }}</a>
         <span class="b-conf-info-arraw"><</span>
         <span>Ershav Informaties conference</span>
         <span class="b-conf-info-arraw">></span>
