--- a/app/templates/video.html
+++ b/app/templates/video.html
@@ -4,26 +4,28 @@
         var match = RegExp('[?&]' + name + '=([^&]*)').exec(url);
         return match && decodeURIComponent(match[1].replace(/\+/g, ' '));
     }
-    </script>
+</script>
 {% block content %}
     <h1>{{ _('Video') }}</h1>
 
-    {% for video in videos %}
-      <div class="col-md-4">
-        <div class="b-images">
-            <img type="button" data-toggle="modal" data-target=".modal-{{ loop.index }}" src="http://img.youtube.com/vi/{{ video.video_id }}/mqdefault.jpg" alt="">
-            <img>
-            <div class="modal fade modal-{{ loop.index }}" tabindex="-1" role="dialog" aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <video id="video-{{ loop.index }}" src="modal-{{ loop.index }}" class="video-js vjs-default-skin" controls preload="auto" width="640" height="480" data-setup='{ "techOrder": ["youtube"], "src": "{{ video.url }}" }'>
-                        </video>
+    <div class="container block">
+        {% for video in videos %}
+            <div class="col-xs-6 col-sm-6 col-md-4 col-lg-3">
+                <div class="b-images">
+                    <img type="button" data-toggle="modal" data-target=".modal-{{ loop.index }}" src="http://img.youtube.com/vi/{{ video.video_id }}/mqdefault.jpg" alt="">
+                    <img>
+                    <div class="modal fade modal-{{ loop.index }}" tabindex="-1" role="dialog" aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <video id="video-{{ loop.index }}" src="modal-{{ loop.index }}" class="video-js vjs-default-skin" controls preload="auto" width="640" height="480" data-setup='{ "techOrder": ["youtube"], "src": "{{ video.url }}" }'>
+                                </video>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-      </div>
-    {% endfor %}
+        {% endfor %}
+    </div>
 
     <script type="text/javascript">
         {% for video in videos %}
