Added translation for header

--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -3,7 +3,7 @@
         <a href="" id="changeLanguageButton">{{ _('ru') }}</a>
         <div class="b-conf-info-wrapper">
             <span class="b-conf-info-arraw"><</span>
-            <span>Ershov Informaties conference</span>
+            <span>{{ _('Ershov Informatics conference') }}</span>
             <span class="b-conf-info-arraw">></span>
         </div>
     </div>
