--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -1,9 +1,32 @@
 {% extends "index.html" %}
 
 {% block content %}
-    {% if locale == 'en' %}
-        <div class="page-content">{{ page.text|safe }}</div>
-    {% else %}
-        <div class="page-content">{{ page.text_ru|safe }}</div>
-    {% endif %}
+<div class="container block">
+    <div class="raw">
+        
+        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+            <h1>{{ _('Dates') }}</h1>
+            {% for post in dates %}
+            <b><span>{{ post.date.strftime('%Y-%m-%d %H:%M:%S') }}</span><br>  </b>
+            {% if locale == 'ru' %}
+                <span>{{ post.description_ru|safe }}</span><br>
+            {% else %}
+                <span>{{ post.description|safe }}</span><br>
+            {% endif %}
+            {% endfor %}
+        </div>
+        
+        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+            <h1>{{ _('News') }}</h1>
+            {% for news_item in news %}
+            <b><span>{{ news_item.date.strftime('%Y-%m-%d %H:%M:%S') }}</span><br></b>
+            {% if locale == 'ru' %}
+                <span>{{ news_item.content_ru|safe }}</span><br>
+            {% else %}
+                <span>{{ news_item.content|safe }}</span><br>
+            {% endif %}
+            {% endfor %}
+        </div>
+    </div>
+</div>
 {% endblock %}
