--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -1,11 +1,13 @@
 <div class="b-header">
     <div class="b-conf-info">
-        <a href="" id="changeLanguageButton">{{ _('ru') }}</a>
         <div class="b-conf-info-wrapper">
             <span class="b-conf-info-arraw"><</span>
             <span>{{ _('Ershov Informatics conference') }}</span>
             <span class="b-conf-info-arraw">></span>
         </div>
+    </div>
+    <div class="b-lang">
+        <a href="" id="changeLanguageButton">{{ _('ru') }}</a>
     </div>
     <div class="b-inno-logo">
         <a href="/"><img src="{{ url_for('static', filename='images/inno_logo.png') }}"></a>
