--- a/app/static/css/global.css
+++ b/app/static/css/global.css
@@ -45,7 +45,7 @@ body
 {
   width: 100%;
   height: 100%;
-  background: #d4e6f2;
+  background: white;
   font-family: ElektraLightPro, ElektraMediumPro;
 }
 
@@ -55,10 +55,23 @@ body
   margin: 0 auto;
 }
 
-.body-content
+.body-left-menu
 {
   background: white;
   min-height: 1500px !important;
+  width: 307px;
+  display: inline-block;
+  vertical-align: top;
+  margin-right: -4px;
+}
+
+.body-content
+{
+  background: #f2f5f7;
+  min-height: 1500px !important;
+  width: 717px;
+  display: inline-block;
+  vertical-align: top;
 }
 
 .b-psi-logo
@@ -69,5 +82,10 @@ body
 
 .block
 {
-  width: 1024px;
+  width: 717px;
+}
+
+.block-menu
+{
+  width: 307px;
 }
