--- a/app/static/css/menu.css
+++ b/app/static/css/menu.css
@@ -8,8 +8,8 @@
     margin-top: 24px;
     display: block;
     position: absolute;
-    top: 230px;
-    left:-270px;
+    top: 180px;
+    width: 307px;
 }
 
 .dropdown-submenu
@@ -23,9 +23,6 @@
     left:100%;
     margin-top:-6px;
     margin-left:-1px;
-    -webkit-border-radius:0 6px 6px 6px;
-    -moz-border-radius:0 6px 6px 6px;
-    border-radius:0 6px 6px 6px;
 }
 
 .dropdown-submenu:hover>.dropdown-menu
@@ -62,9 +59,6 @@
 {
     left:-100%;
     margin-left:10px;
-    -webkit-border-radius:6px 0 6px 6px;
-    -moz-border-radius:6px 0 6px 6px;
-    border-radius:6px 0 6px 6px;
 }
 
 .dropdown-menu li {
