Keynote speakers on main page

--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -2,9 +2,9 @@
     <div class="b-conf-info">
         <a href="" id="changeLanguageButton">{{ _('ru') }}</a>
         <div class="b-conf-info-wrapper">
-            <span class="b-conf-info-arraw"><</span>
+            <span class="b-conf-info-arraw">&lt;</span>
             <span>{{ _('Ershov Informatics conference') }}</span>
-            <span class="b-conf-info-arraw">></span>
+            <span class="b-conf-info-arraw">&gt;</span>
         </div>
     </div>
     <div class="b-inno-logo">
