--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,12 +5,13 @@
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='bootstrap/css/bootstrap-theme.min.css') }}">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/global.css') }}">
 
+
 <script src="{{ url_for('static', filename='js/jquery-2.1.3.min.js') }}"></script>
 <script src="{{ url_for('static', filename='bootstrap/js/bootstrap.min.js') }}"></script>
 
-</script>
 {% block head %}{% endblock %}
 
 <body class="body-wrapper">
     {% block body %}{% endblock %}
+    {% block footer %}{% endblock %}
 </body>
