--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -1,9 +1,20 @@
 {% extends "index.html" %}
 
+{% block head %}
+{{super()}}
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='slick-carousel/slick/slick.css') }}"/>
+
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='slick-carousel/slick/slick-theme.css') }}"/>
+
+{% endblock %}
+
+
+
+
 {% block content %}
 <div class="container block">
     <div class="raw">
-        
+
         <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
             <h1>{{ _('Dates') }}</h1>
             {% for post in dates %}
@@ -15,7 +26,7 @@
             {% endif %}
             {% endfor %}
         </div>
-        
+
         <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
             <h1>{{ _('News') }}</h1>
             {% for news_item in news %}
@@ -27,6 +38,29 @@
             {% endif %}
             {% endfor %}
         </div>
+      </div>
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
+          <h1> {{_('Keynote Speakers')}} </h1>
+
+          <div data-slick='{"slidesToShow": 3, "slidesToScroll": 1, "prevArrow": "<span class=\"arrow-prev \">&lt;</span>", "nextArrow": "<span class=\"arrow-next \">&gt;</span>"}'>
+            {% for speaker in speakers %}
+            <div style="text-align:center;">
+              {% if locale == 'en' %}
+                    <a href="{{ speaker.bio_reference_link }}"><img class="portrait"src="images/{{ speaker.photo.name }}"  alt="{{ speaker.name }}"></a>
+                    <p><a href="{{ speaker.bio_reference_link }}"><em>{{ speaker.name }}</em><br>
+                      {{ speaker.country }}</a></p>
+                {% else %}
+                <a href="{{ speaker.bio_reference_link }}"><img src="images/{{ speaker.photo.name }}" alt="{{ speaker.name }}"></a>
+                    <p><a href="{{ speaker.bio_reference_link }}"><em>{{ speaker.name_ru }}</em><br>
+                      {{ speaker.country_ru }}</a></p>
+              {% endif %}
+            </div>
+            {% endfor %}
+          </div>
     </div>
 </div>
+{% endblock %}
+
+{% block footer %}
+    <script type="text/javascript" src="{{ url_for('static', filename='slick-carousel/slick/slick.min.js') }}"></script>
 {% endblock %}
