--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -39,6 +39,12 @@
 <div class="container block">
     <span>Materials</span>
     <div class="raw">
+        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+            <a href="/"><img src="{{ url_for('static', filename='images/photo.png') }}"></a>
+        </div>
+        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+            <a href="/"><img src="{{ url_for('static', filename='images/video.png') }}"></a>
+        </div>
     </div>
 </div>
 
