--- a/app/static/css/speakers.css
+++ b/app/static/css/speakers.css
@@ -36,7 +36,7 @@ div.keynote:hover {
 {
   max-width: 220px;
   margin-bottom: 10px;
-  margin-left: 20px;
+  margin: auto;
   margin-top: 20px;
 
   -webkit-box-shadow: 0px 3px 5px rgba(0,0,0,0.2);
