--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -70,13 +70,9 @@
 <div class="b-main-separator"></div>
 <div class="container block">
     <span class="b-main-centered-title">{{_('Materials')}}</span>
-    <div class="raw">
-        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-            <a href="/"><img src="{{ url_for('static', filename='images/photo.png') }}"></a>
-        </div>
-        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-            <a href="/"><img src="{{ url_for('static', filename='images/video.png') }}"></a>
-        </div>
+    <div class="b-materials">
+        <a href="/"><img src="{{ url_for('static', filename='images/photo.png') }}"></a>
+        <a href="/"><img src="{{ url_for('static', filename='images/video.png') }}"></a>
     </div>
 </div>
 
